--- a/.extra_files/dataFormats.cfg
+++ b/.extra_files/dataFormats.cfg
@@ -1,4 +1,4 @@
-Negatif en rouge (example: 21 435,45); CONCAT('<span style=''color: ', IF(%%FIELD%% < 0, 'red', 'black'), ';''>', FORMAT(%%FIELD%%, 2, 'ru_RU'), '</span>')
+Negatif en rouge (example: 21 435,45 €); CONCAT('<span style=''color: ', IF(%%FIELD%% < 0, 'red', 'black'), ';''>', FORMAT(%%FIELD%%, 2, 'ru_RU'), '&nbsp;&euro;</span>')
 Pourcent, >100% en rouge (example: 67%); CONCAT('<span style=''color: ', IF(%%FIELD%% > 100, 'red', 'black'), ';''>', FORMAT(%%FIELD%%, 0, 'ru_RU'), '%</span>')
 US Currency (example: $21,345.67); CONCAT('$', FORMAT(%%FIELD%%, 2))
 Euro Currency (example: €21,345.67); CONCAT('&euro;', FORMAT(%%FIELD%%, 2))
